--- a/Chicago/pom.xml
+++ b/Chicago/pom.xml
@@ -23,7 +23,17 @@
 	
 	<dependencies>
 	
-		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.6.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.4</version>
+		</dependency>
 	
 		<!-- MyBatis -->
 		<dependency>
@@ -54,7 +64,6 @@
     		<artifactId>ojdbc6</artifactId>
     		<version>11.1.0.7.0</version>
 		</dependency>
-		
 		
 		<!-- Spring -->
 		<dependency>
